# gish

./: CMakeLists.txt  README.markdown  build-appimage.sh  build-bundle.sh  build-notarize.sh  build-package.sh  build.lhelper  env-x86-64.sh  main.c  meson.build  meson_options.txt
audio/: audio.c
game/: animation.c  block.c  config.c  custom.c  editor.c  game.c  gamemenu.c  gametexture.c  high.c  level.c  mappack.c  music.c  objedit.c  player.c  prerender.c  record.c  ropeedit.c  socket.c
input/: keyboard.c  mouse.c
resources/: Info.plist.in  create_icns  freegish.desktop  icon.icns
sdl/: event.c  file.h  video.c
src/: macosbundle.m  main.c  meson.build
src/game/: animation.c  block.c  config.c  custom.c  editor.c  game.c  gamemenu.c  gametexture.c  high.c  level.c  mappack.c  objedit.c  player.c  ropeedit.c  socket.c
src/input/: joystick.h  keyboard.c  keyboard.h  mouse.c
src/menu/: menu.h
src/sdl/: endian.c  event.c  video.c  video.h
src/video/: opengl.c  texture.c
video/: macosdpi.m  texture.c
